fin_exo_sans_responsive

--- a/index.html
+++ b/index.html
@@ -29,19 +29,51 @@
           </div>
     </header>
     <section>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-6 col-sm">
+        <div class="container text-center">
+            <div style="align-items: center;" class="row">
+                <div class="col-6">
                     <h1>far those about to rock</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, nihil. Vero ad, facere non animi pariatur nesciunt doloremque obcaecati sequi.</p>
                    
                 </div>
+                <div class="col-6">
+                    <img src="./public/img/01.jpg" alt="" class="rounded-circle w-75 p-3 img-fluid">
+                </div>
+            </div>
+        </div>
+
+        <!-- div img 2 -->
+        <div class="container text-center h-auto d-inline-block">
+            <div style="align-items: center;" class="row">
                 <div class="col-6 col-sm">
-                    <img src="./public/img/01.jpg" alt="" class="rounded-circle">
+                    <img src="./public/img/02.jpg" alt="" class="rounded-circle w-75 p-3 img-fluid">
+                </div>
+                <div class="col-6 col-sm">
+                    <h1>far those about to rock</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, nihil. Vero ad, facere non animi pariatur nesciunt doloremque obcaecati sequi.</p>
+                </div>
+            </div>
+        </div>
+        <!-- div img 3 -->
+        <div class="container text-center">
+            <div style="align-items: center;" class="row">
+                <div class="col-6 mh-100">
+                    <h1>far those about to rock</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, nihil. Vero ad, facere non animi pariatur nesciunt doloremque obcaecati sequi.</p>
+                   
+                </div>
+                <div class="col-6">
+                    <img src="./public/img/03.jpg" alt="" class="rounded-circle w-75 p-3 img-fluid">
                 </div>
             </div>
         </div>
     </section>
+<!-- footer -->
+    <footer>
+        <div class="p-3 mb-2 bg-dark text-white text-center p-0">Copuright&copy; Your Website 2020</div>
+    </footer>
+
+
 
 
 
